Systems: Use KeyValueString for jobEnvVariables.